--- a/viz/NSL/NSL_categories_grouped_bar1.html
+++ b/viz/NSL/NSL_categories_grouped_bar1.html
@@ -208,6 +208,6 @@ d3.csv("NSL_categories_group.csv", function(error, data) {
 
 d3.select("#chart").append("div")
     .attr("class", "footnote")
-    .html("<em>THIS LANUGAGE NEEDS TO BE UPDATED Tong Ying-kit is counted twice in this chart because he was charged under both the secession and terrorism provisions.</em>");
+    .html("<em>Individuals charged under multiple provisions are counted multiple times in this chart, once for each provision.</em>");
 
 </script>
