--- a/viz/NSL/arrest_venn.html
+++ b/viz/NSL/arrest_venn.html
@@ -16,7 +16,7 @@ body {
 <body>
 	<div id="wrapper">
 	<div id="header">Stated Grounds for Arrest</div>
-	<div id="subhed">Individuals arrested for violating the NSL, individuals arrested by the NSD without invocation of the NSL, and individuals arrested for both NSL and non-NSL violations</div>
+	<!-- <div id="subhed">Individuals arrested for violating the NSL, individuals arrested by the NSD without invocation of the NSL, and individuals arrested for both NSL and non-NSL violations</div> -->
   <div id="venn"></div>
 	</div>
 </body>
@@ -69,10 +69,19 @@ vertical-align: text-top;
 /* overflow:hidden; */
 /* max-width: 90%; */
 margin-top:-20px;
-margin-bottom:-30px;
+margin-bottom:-10px;
 text-align:center;
 /* vertical-align: text-top; */
 }
+
+
+.footnote {
+		font-size: 13px;
+		text-align:center;
+		fill: #000;
+		font-family: Arial;
+}
+
 </style>
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
@@ -105,6 +114,11 @@ var div = d3.select("#venn").datum(sets).call(chart);
                    .style("stroke-width", 1)
                    .style("stroke-opacity", 1)
                    .style("stroke", "fff");
+
+d3.select("#wrapper").append("div")
+  .attr("class", "footnote")
+  .html("<em>The category “NSL” refers to individuals arrested for violating the NSL. “Non-NSL” refers to individuals arrested by the NSD without invocation of the NSL. “Both” refers to individuals arrested for multiple violations, including both NSL and non-NSL violations.</em>");
+
 
 </script>
 </html>
