--- a/viz/NSL/NSL_table_final_plain.html
+++ b/viz/NSL/NSL_table_final_plain.html
@@ -15,10 +15,11 @@
 				font-size: 14px;
 				font-family: Arial;
 				font-style: italic;
-				font-weight: bold;
+				/* font-weight: bold; */
 				margin-left:15px;
 				margin-right:15px;
 				margin-bottom:15px;
+				margin-top:15px;
 				text-align:center;
 				vertical-align: text-top;
 			}
@@ -76,7 +77,7 @@
 	<body>
 
 <div id="header">Individuals Arrested under the National Security Law or by the National Security Department</div>
-<div id="subhed">All actions listed are alleged by Hong Kong government entities and have not been independently verified. <br> Data cut-off date: March 15, 2021</div>
+<div id="subhed">All actions listed are alleged by Hong Kong government entities and have not been independently verified. <br><br> Data cut-off date: March 15, 2021</div>
 	<table class="tableizer-table">
 
 	<!–– add your tableizer data below this line, removing table class=tableizer-table and tr class=tableizer-firstrow ––>
