--- a/viz/NSL/NSL_table_final_plain.html
+++ b/viz/NSL/NSL_table_final_plain.html
@@ -77,7 +77,7 @@
 	<body>
 
 <div id="header">Individuals Arrested under the National Security Law or by the National Security Department</div>
-<div id="subhed">All actions listed are alleged by Hong Kong government entities and have not been independently verified. <br><br> Data cut-off date: March 15, 2021</div>
+<div id="subhed">Note: All offenses detailed here derive from Hong Kong government allegations and neither the authors of this article nor ChinaFile’s editors have independently verified them.<br><br> Data cut-off date: April 30, 2020</div>
 	<table class="tableizer-table">
 
 	<!–– add your tableizer data below this line, removing table class=tableizer-table and tr class=tableizer-firstrow ––>
