--- a/viz/NSL/arrests_month.html
+++ b/viz/NSL/arrests_month.html
@@ -170,7 +170,7 @@ var data = [{"month":"March 2021","arrests":1},{"month":"February 2021","arrests
 
 d3.select("body").append("div")
     .attr("class", "footnote")
-    .html("<em>Total number of individuals arrested: 111<br>For people who have been arrested multiple times, only the first arrest is counted here.</em>");
+    .html("<em>Total individuals arrested: 111<br>For people arrested multiple times, only the first arrest is counted here.</em>");
 
 
     </script>
