--- a/viz/NSL/charges_month.html
+++ b/viz/NSL/charges_month.html
@@ -90,7 +90,7 @@
 
     <script>
 
-var data = [{"month":"March 2021","arrests":47},{"month":"February 2021","arrests":2},{"month":"January 2021","arrests":0},{"month":"December 2020","arrests":3},{"month":"November 2020","arrests":1},{"month":"October 2020","arrests":1},{"month":"September 2020","arrests":3},{"month":"August 2020","arrests":0},{"month":"July 2020","arrests":1}];
+var data = [{"month":"April 2021","arrests":0},{"month":"March 2021","arrests":47},{"month":"February 2021","arrests":2},{"month":"January 2021","arrests":0},{"month":"December 2020","arrests":3},{"month":"November 2020","arrests":1},{"month":"October 2020","arrests":1},{"month":"September 2020","arrests":3},{"month":"August 2020","arrests":0},{"month":"July 2020","arrests":1}];
         //set up svg using margin conventions - we'll need plenty of room on the left for labels
         var margin = {
             top: 20,
