--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1772,6 +1772,17 @@
       <td>Hainan</td>
     </tr>
     <tr>
+      <td>Europe-Guangxi Chamber of Commerce</td>
+      <td>欧盟广西总商会</td>
+      <td>Guangxi Department of Commerce</td>
+      <td>广西壮族自治区商务厅</td>
+      <td>Germany</td>
+      <td>Trade/Industry Association</td>
+      <td>Guangxi</td>
+      <td>2021-05-11</td>
+      <td>Guangxi</td>
+    </tr>
+    <tr>
       <td>European American Chamber of Commerce and Industry</td>
       <td>欧美工商会</td>
       <td>Beijing Bureau of Commerce (formerly Beijing Commission of Commerce)</td>
