--- a/viz/NSL/NSL_table_final.html
+++ b/viz/NSL/NSL_table_final.html
@@ -53,8 +53,8 @@
 
         table.sortable {border-spacing: 0}
         table.sortable td, th {padding: 0 0.3em}
-        tr:nth-child(even) {background: #e6e6e6}
-        tr:nth-child(odd) {background: #FFF}
+        /* tr:nth-child(even) {background: #e6e6e6}
+        tr:nth-child(odd) {background: #FFF} */
 
       </style>
   </head>
@@ -196,7 +196,7 @@ var filtersConfig = {
     auto_filter_delay: 1100, //milliseconds
     filters_row_index: 1,
     state: true,
-    alternate_rows: true,
+    // alternate_rows: true,
     rows_counter: true,
     btn_reset: true,
     status_bar: true,
