--- a/viz/NSL/NSL_table_final.html
+++ b/viz/NSL/NSL_table_final.html
@@ -13,7 +13,7 @@
 			overflow:hidden;
 			max-width: 100%;
 			font-size: 14px;
-			font-family: Arial;
+			font-family: Georgia;
 			font-style: italic;
 			/* font-weight: bold; */
 			margin-left:15px;
