--- a/viz/survey/survey_pie3.html
+++ b/viz/survey/survey_pie3.html
@@ -11,8 +11,8 @@ body{
 
 #wrapper {
 width:100%;
-/* max-width: 340px;
-max-height: 265px; */
+max-width: 400px;
+max-height: 350px;
 margin:0 auto;
 overflow:hidden;
 /* background-color: #346bca; */
@@ -165,7 +165,7 @@ var pie = new d3pie("pieChart", {
 			"percentage": 100
 		},
 		"canvasPadding":{
-      "top":-90,"right":-30,"bottom":0,"left":0} //150
+      "top":-150,"right":-15,"bottom":0,"left":0} //150
 	}
 
 });
