--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1777,7 +1777,7 @@
       <td>Guangxi Department of Commerce</td>
       <td>广西壮族自治区商务厅</td>
       <td>Germany</td>
-      <td>Trade/Industry Association</td>
+      <td>International Relations/Exchange, Trade/Industry Association</td>
       <td>Guangxi</td>
       <td>2021-05-11</td>
       <td>Guangxi</td>
@@ -4791,7 +4791,7 @@
       <td>Shanghai Hongqiao Business District Management Committee</td>
       <td>上海虹桥商务区管理委员会</td>
       <td>Russia</td>
-      <td>Trade/Industry Association</td>
+      <td>International Relations/Exchange, Trade/Industry Association</td>
       <td>Shanghai</td>
       <td>2021-04-21</td>
       <td>China</td>
@@ -6037,6 +6037,17 @@
       <td>Economic Development, International Relations/Exchange</td>
       <td>Beijing</td>
       <td>2017-01-23</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>World Endoscopy Doctors Association</td>
+      <td>世界内镜医师协会</td>
+      <td>Beijing Commission of Science and Technology</td>
+      <td>北京市科学技术委员会</td>
+      <td>Unknown</td>
+      <td>Health, International Relations/Exchange, Science and Technology</td>
+      <td>Beijing</td>
+      <td>2021-06-10</td>
       <td>China</td>
     </tr>
     <tr>
