--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -3114,6 +3114,17 @@
       <td>NaN</td>
     </tr>
     <tr>
+      <td>International Social Service Hong Kong Branch</td>
+      <td>香港国际社会服务社</td>
+      <td>Guangdong Department of Civil Affairs</td>
+      <td>广东省民政厅</td>
+      <td>Hong Kong</td>
+      <td>Aging, Migrants, Youth</td>
+      <td>Guangdong</td>
+      <td>2021-06-17</td>
+      <td>Guangdong</td>
+    </tr>
+    <tr>
       <td>International Taekwon-Do Federation</td>
       <td>国际跆拳道联盟大韩民国协会</td>
       <td>Zhejiang Department of Education</td>
@@ -3772,6 +3783,17 @@
       <td>Sichuan</td>
       <td>2017-05-27</td>
       <td>Sichuan</td>
+    </tr>
+    <tr>
+      <td>Lingnan (University) College Educational Development and Research Foundation Limited</td>
+      <td>岭南（大学）学院教研发展基金有限公司</td>
+      <td>Guangdong Department of Education</td>
+      <td>广东省教育厅</td>
+      <td>Hong Kong</td>
+      <td>Education, International Relations/Exchange</td>
+      <td>Guangdong</td>
+      <td>2021-06-17</td>
+      <td>Guangdong</td>
     </tr>
     <tr>
       <td>Lipoid Stiftung</td>
