--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -3092,6 +3092,17 @@
       <td>Anhui, Fujian, Hubei, Hunan, Jiangsu, Jiangxi, Shanghai, Zhejiang</td>
     </tr>
     <tr>
+      <td>International Secretariat G-Global</td>
+      <td>G-Global 国际秘书处协会</td>
+      <td>Hainan Department of Commerce</td>
+      <td>海南省商务厅</td>
+      <td>Kazakhstan</td>
+      <td>Trade/Industry Association</td>
+      <td>Hainan</td>
+      <td>2021-06-24</td>
+      <td>Hainan</td>
+    </tr>
+    <tr>
       <td>International Silk Union</td>
       <td>国际丝绸联盟</td>
       <td>Zhejiang Department of Commerce</td>
@@ -6087,7 +6098,7 @@
       <td>World Federation of Free Trade Zones (WFFTZ)</td>
       <td>世界自由贸易区联合会</td>
       <td>Zhejiang Department of Commerce</td>
-      <td>浙江省商务厅</td>
+      <td>G-Global 国际秘书处协会</td>
       <td>United States</td>
       <td>International Relations/Exchange, Trade/Industry Association</td>
       <td>Zhejiang</td>
