--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -3092,17 +3092,6 @@
       <td>Anhui, Fujian, Hubei, Hunan, Jiangsu, Jiangxi, Shanghai, Zhejiang</td>
     </tr>
     <tr>
-      <td>International Secretariat G-Global</td>
-      <td>G-Global 国际秘书处协会</td>
-      <td>Hainan Department of Commerce</td>
-      <td>海南省商务厅</td>
-      <td>Kazakhstan</td>
-      <td>Trade/Industry Association</td>
-      <td>Hainan</td>
-      <td>2021-06-24</td>
-      <td>Hainan</td>
-    </tr>
-    <tr>
       <td>International Silk Union</td>
       <td>国际丝绸联盟</td>
       <td>Zhejiang Department of Commerce</td>
@@ -6434,6 +6423,28 @@
       <td>Yunnan</td>
       <td>2017-12-14</td>
       <td>Yunnan</td>
+    </tr>
+    <tr>
+      <td>International Secretariat G-Global</td>
+      <td>G-Global 国际秘书处协会</td>
+      <td>Hainan Department of Commerce</td>
+      <td>海南省商务厅</td>
+      <td>Kazakhstan</td>
+      <td>Trade/Industry Association</td>
+      <td>Hainan</td>
+      <td>2021-06-24</td>
+      <td>Hainan</td>
+    </tr>
+    <tr>
+      <td>CloudSecurityAlliance</td>
+      <td>云安全联盟大中华区</td>
+      <td>Shanghai Commission of Economy and Informatization</td>
+      <td>上海市经济和信息化委员会</td>
+      <td>Hong Kong</td>
+      <td>Science and Technology, Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2021-07-06</td>
+      <td>China</td>
     </tr>
   </tbody>
 </table>
