--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1376,6 +1376,17 @@
       <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
     </tr>
     <tr>
+      <td>CloudSecurityAlliance</td>
+      <td>云安全联盟大中华区</td>
+      <td>Shanghai Commission of Economy and Informatization</td>
+      <td>上海市经济和信息化委员会</td>
+      <td>Hong Kong</td>
+      <td>Science and Technology, Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2021-07-06</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Coalition for Epidemic Preparedness Innovations (CEPI)</td>
       <td>流行病防范创新联盟</td>
       <td>Shanghai Commission of Science and Technology</td>
@@ -3090,6 +3101,17 @@
       <td>Hubei</td>
       <td>2017-05-15</td>
       <td>Anhui, Fujian, Hubei, Hunan, Jiangsu, Jiangxi, Shanghai, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>International Secretariat G-Global</td>
+      <td>G-Global 国际秘书处协会</td>
+      <td>Hainan Department of Commerce</td>
+      <td>海南省商务厅</td>
+      <td>Kazakhstan</td>
+      <td>Trade/Industry Association</td>
+      <td>Hainan</td>
+      <td>2021-06-24</td>
+      <td>Hainan</td>
     </tr>
     <tr>
       <td>International Silk Union</td>
@@ -5743,6 +5765,17 @@
       <td>Chongqing</td>
     </tr>
     <tr>
+      <td>United Jiangxi Business Council of Canada</td>
+      <td>加拿大赣商联合会</td>
+      <td>Jiangxi Department of Commerce</td>
+      <td>江西省商务厅</td>
+      <td>Canada</td>
+      <td>Arts and Culture, International Relations/Exchange, Trade/Industry Association</td>
+      <td>Jiangxi</td>
+      <td>2021-07-15</td>
+      <td>Jiangxi</td>
+    </tr>
+    <tr>
       <td>United States Humane Society Charitable Foundation</td>
       <td>美国仁社慈善基金会</td>
       <td>Shaanxi Federation of Returned Overseas Chinese</td>
@@ -6423,28 +6456,6 @@
       <td>Yunnan</td>
       <td>2017-12-14</td>
       <td>Yunnan</td>
-    </tr>
-    <tr>
-      <td>International Secretariat G-Global</td>
-      <td>G-Global 国际秘书处协会</td>
-      <td>Hainan Department of Commerce</td>
-      <td>海南省商务厅</td>
-      <td>Kazakhstan</td>
-      <td>Trade/Industry Association</td>
-      <td>Hainan</td>
-      <td>2021-06-24</td>
-      <td>Hainan</td>
-    </tr>
-    <tr>
-      <td>CloudSecurityAlliance</td>
-      <td>云安全联盟大中华区</td>
-      <td>Shanghai Commission of Economy and Informatization</td>
-      <td>上海市经济和信息化委员会</td>
-      <td>Hong Kong</td>
-      <td>Science and Technology, Trade/Industry Association</td>
-      <td>Shanghai</td>
-      <td>2021-07-06</td>
-      <td>China</td>
     </tr>
   </tbody>
 </table>
