--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -342,6 +342,17 @@
       <td>Shanghai</td>
     </tr>
     <tr>
+      <td>Asia Model Association</td>
+      <td>亚洲模特协会</td>
+      <td>Chongqing Culture and Tourism Development Commission (formerly Chongqing Tourism Development Commission)</td>
+      <td>重庆市文化和旅游发展委员会</td>
+      <td>South Korea</td>
+      <td>Trade/Industry Association</td>
+      <td>Chongqing</td>
+      <td>2021-07-20</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Asia-Europe-Africa Trade and Investment Alliance Promotion Council</td>
       <td>亚欧非贸易投资联合促进会</td>
       <td>Tianjin Commission of Commerce</td>
@@ -2080,6 +2091,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Georgia Federation of Foreign Trade</td>
+      <td>格鲁吉亚对外贸易联合会</td>
+      <td>Shanghai Hongqiao Business District Management Committee</td>
+      <td>上海虹桥商务区管理委员会</td>
+      <td>Georgia</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2021-07-23</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>German Academic Exchange Service (DAAD) (Beijing)</td>
       <td>德国学术交流中心</td>
       <td>Ministry of Education</td>
@@ -2617,6 +2639,17 @@
       <td>Beijing</td>
       <td>2019-12-02</td>
       <td>China</td>
+    </tr>
+    <tr>
+      <td>Hong Kong Institute of Certified Public Accountants</td>
+      <td>香港会计师公会</td>
+      <td>Ministry of Finance</td>
+      <td>财政部</td>
+      <td>Hong Kong</td>
+      <td>Trade/Industry Association</td>
+      <td>Guangdong</td>
+      <td>2021-07-20</td>
+      <td>Fujian, Guangdong, Guangxi, Hainan, Hubei, Hunan</td>
     </tr>
     <tr>
       <td>Hong Kong Institute of Chartered Secretaries</td>
@@ -5466,6 +5499,17 @@
       <td>Fujian</td>
       <td>2018-12-21</td>
       <td>Fujian</td>
+    </tr>
+    <tr>
+      <td>Tanzania-China Chamber of Commerce</td>
+      <td>坦桑尼亚中国商会</td>
+      <td>Zhejiang Department of Commerce</td>
+      <td>浙江省商务厅</td>
+      <td>Tanzania</td>
+      <td>Trade/Industry Association</td>
+      <td>Zhejiang</td>
+      <td>2021-07-23</td>
+      <td>Zhejiang</td>
     </tr>
     <tr>
       <td>Thai-Chinese Chamber of Commerce</td>
