--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -6128,6 +6128,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>World Dance Council</td>
+      <td>世界舞蹈总会</td>
+      <td>Ningxia Department of Culture and Tourism (formerly Ningxia Department of Culture)</td>
+      <td>宁夏回族自治区文化和旅游厅</td>
+      <td>United Kingdom</td>
+      <td>Arts and Culture, International Relations/Exchange, Tourism</td>
+      <td>Ningxia</td>
+      <td>2021-07-30</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>World Economic Forum</td>
       <td>世界经济论坛</td>
       <td>National Development and Reform Commission</td>
