--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -3246,6 +3246,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Interprofessional Bordeaux Wine Council (CIVB)</td>
+      <td>波尔多葡萄酒行业联合委员会</td>
+      <td>Council for the Promotion of International Trade, Shanghai</td>
+      <td>上海市国际贸易促进委员会</td>
+      <td>France</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2021-08-05</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Investe São Paulo Investment Promotion Agency</td>
       <td>巴西圣保罗州投资促进局</td>
       <td>Shanghai Commission of Commerce</td>
