--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -562,6 +562,17 @@
       <td>Hebei</td>
     </tr>
     <tr>
+      <td>Automobile Managers' Association</td>
+      <td>汽车经理人协会</td>
+      <td>Council for the Promotion of International Trade, Hubei</td>
+      <td>中国国际贸易促进委员会湖北省委员会</td>
+      <td>Germany</td>
+      <td>Trade/Industry Association</td>
+      <td>Hubei</td>
+      <td>2021-08-11</td>
+      <td>Anhui, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
       <td>Better Cotton Initiative</td>
       <td>瑞士良好棉花发展协会</td>
       <td>Shanghai Commission of Commerce</td>
@@ -1387,7 +1398,7 @@
       <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
     </tr>
     <tr>
-      <td>CloudSecurityAlliance</td>
+      <td>Cloud Security Alliance</td>
       <td>云安全联盟大中华区</td>
       <td>Shanghai Commission of Economy and Informatization</td>
       <td>上海市经济和信息化委员会</td>
@@ -2705,6 +2716,17 @@
       <td>Sichuan</td>
       <td>2017-11-21</td>
       <td>Sichuan</td>
+    </tr>
+    <tr>
+      <td>Hong Kong Youth Synergy</td>
+      <td>香港青年学生动力基金有限公司</td>
+      <td>Guangdong Youth Federation</td>
+      <td>广东省青年联合会</td>
+      <td>Hong Kong</td>
+      <td>International Relations/Exchange, Youth</td>
+      <td>Guangdong</td>
+      <td>2021-08-13</td>
+      <td>Guangdong</td>
     </tr>
     <tr>
       <td>Hong Kong-Shanghai Youth Association</td>
