--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -4269,6 +4269,17 @@
       <td>Anhui, Fujian, Jiangsu, Jiangxi, Shandong, Shanghai, Zhejiang</td>
     </tr>
     <tr>
+      <td>New Zealand Hubei Chamber of Commerce</td>
+      <td>新西兰湖北商业总会</td>
+      <td>Council for the Promotion of International Trade, Hubei</td>
+      <td>中国国际贸易促进委员会湖北委员会</td>
+      <td>New Zealand</td>
+      <td>Trade/Industry Association</td>
+      <td>Hubei</td>
+      <td>2021-08-19</td>
+      <td>Anhui, Beijing, Chongqing, Guangdong, Guangxi, Hainan, Hebei, Henan, Hubei, Hunan, Jiangxi, Shanghai, Sichuan, Tianjin</td>
+    </tr>
+    <tr>
       <td>Next-Town Foundation</td>
       <td>下一城基金会</td>
       <td>Henan Department of Education</td>
@@ -6059,6 +6070,17 @@
       <td>Trade/Industry Association</td>
       <td>Shanghai</td>
       <td>2017-11-09</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>Western United States Agricultural Trade Association (WUSATA)</td>
+      <td>美国西部农业贸易协会</td>
+      <td>Council for the Promotion of International Trade, Shanghai</td>
+      <td>上海市国际贸易促进委员会</td>
+      <td>United States</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2021-08-20</td>
       <td>China</td>
     </tr>
     <tr>
