--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -562,7 +562,7 @@
       <td>Hebei</td>
     </tr>
     <tr>
-      <td>Automobile Managers' Association</td>
+      <td>Automobile Managers’ Association</td>
       <td>汽车经理人协会</td>
       <td>Council for the Promotion of International Trade, Hubei</td>
       <td>中国国际贸易促进委员会湖北省委员会</td>
@@ -2946,6 +2946,17 @@
       <td>Trade/Industry Association</td>
       <td>Beijing</td>
       <td>2018-02-05</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>International Aluminium Institute</td>
+      <td>国际铝业协会</td>
+      <td>Ministry of Industry and Information Technology</td>
+      <td>中华人民共和国工业和信息化部</td>
+      <td>United Kingdom</td>
+      <td>Trade/Industry Association</td>
+      <td>Beijing</td>
+      <td>2021-08-25</td>
       <td>China</td>
     </tr>
     <tr>
@@ -6078,7 +6089,7 @@
       <td>Council for the Promotion of International Trade, Shanghai</td>
       <td>上海市国际贸易促进委员会</td>
       <td>United States</td>
-      <td>Trade/Industry Association</td>
+      <td>Agriculture, Trade/Industry Association</td>
       <td>Shanghai</td>
       <td>2021-08-20</td>
       <td>China</td>
