--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -5259,6 +5259,17 @@
       <td>Beijing, Gansu, Guangdong, Shaanxi, Shandong, Shanghai, Sichuan</td>
     </tr>
     <tr>
+      <td>South Korea Sokcho Chamber of Commerce and Industry</td>
+      <td>韩国束草商工会议所</td>
+      <td>Jilin Department of Commerce</td>
+      <td>吉林省商务厅</td>
+      <td>South Korea</td>
+      <td>Trade/Industry Association</td>
+      <td>Jilin</td>
+      <td>2021-09-06</td>
+      <td>Heilongjiang, Jilin, Liaoning</td>
+    </tr>
+    <tr>
       <td>South Korea Suowang Emergency Medical Treatment Aid Organization</td>
       <td>韩国所望医疗援助机构</td>
       <td>Hubei Health Commission (formerly Hubei Health and Family Planning Commission)</td>
