--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1497,6 +1497,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Content Overseas Distribution Association (CODA)</td>
+      <td>日本内容产品海外流通促进机构</td>
+      <td>National Copyright Administration</td>
+      <td>国家版权局</td>
+      <td>Japan</td>
+      <td>Trade/Industry Association</td>
+      <td>Beijing</td>
+      <td>2021-09-13</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Cotton USA</td>
       <td>美国国际棉花协会</td>
       <td>Shanghai Commission of Commerce</td>
